# mars-risk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
notebooks/: mars_test.ipynb
src/: _test_mars_opt_binner.py  _test_profiler_jupyter.ipynb  _tset_stress_profiler.py.py  demo_binning.py  test_mars_native_binner.py  test_mars_opt_binner.py  test_native_binning.ipynb  test_opt_binning.ipynb  test_profiler_jupyter.ipynb  test_stress_native_binning.py
src/mars/: __init__.py  base.py
src/mars/analysis/: bining.py  profiler.py  report.py
src/mars/core/: base.py  config.py
src/mars/feature/: __init__.py  binning.py
src/mars/modeling/: strategies.py
src/mars/utils/: date.py  decorators.py  logger.py
