[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mars-risk"  # PyPI上的名字，先去搜一下有没有被占用！
version = "0.1.1"      # 语义化版本号
description = "High-performance Risk Modeling Toolkit powered by Polars"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["risk", "scorecard", "polars", "credit-scoring"]
dependencies = [
    "polars>=0.19.0",
    "scikit-learn>=1.3.0",
    # ... 其他依赖
]

# 自动发现包
[tool.setuptools.packages.find]
where = ["src"]